--- a/Basic/2.Circle area/circle-area.html
+++ b/Basic/2.Circle area/circle-area.html
@@ -1,11 +1,9 @@
+<!DOCTYPE html>
 <html>
 <head>
   <title>Circle Area</title>
 </head>
 <body>	
-  <p>r = 7; area="calcCircleArea(7)"</p>
-  <p>r = 1.5; area="calcCircleArea(1.5)"</p>
-  <p>r = 20; area="calcCircleArea(2)"</p>
-<script src="circle-area.js"></script>
+<script type="text/javascript" src="circle-area.js"></script>
 </body>
 </html>
