complete circle-area

--- a/Basic/2.Circle area/circle-area.html
+++ b/Basic/2.Circle area/circle-area.html
@@ -2,8 +2,11 @@
 <html>
 <head>
   <title>Circle Area</title>
+  <script type="text/javascript" src="circle-area.js"></script>
 </head>
 <body>	
-<script type="text/javascript" src="circle-area.js"></script>
+  <p>r = 7; area = <script>document.write(calcCircleArea(7));</script></p>
+  <p>r = 1.5; area = <script>document.write(calcCircleArea(1.5));</script></p>
+  <p>r = 2; area = <script>document.write(calcCircleArea(2));</script></p>
 </body>
 </html>
