--- a/Basic/9.Calculate expression/index.html
+++ b/Basic/9.Calculate expression/index.html
@@ -7,7 +7,8 @@
   <div>
   <input type="text" id="input"></input>
   </div>
-  <button>Eval</button>	
+  <button onclick="getInput()">Eval</button>	
   <p id="output">Ouput form</p>	
+  <script src="calcExpression.js" type="text/javascript" charset="utf-8"></script>
 </body>
 </html>
